# QSAR

./: .buildinfo  .gitignore  .pylintrc  GAN.drawio  LICENSE  README.md  contributing.html  csv_for_Qsar_Tool-Copy1.ipynb  documentation.html  environment.yaml  gan.html  genindex.html  index.html  installation.html  main.py  models.html  objects.inv  preprocessing.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  utils.html  visualization.html
.doctrees/: contributing.doctree  documentation.doctree  environment.pickle  gan.doctree  index.doctree  installation.doctree  models.doctree  preprocessing.doctree  quickstart.doctree  utils.doctree  visualization.doctree
Data/: full_dataset_test_divprio.csv  full_dataset_train_divprio.csv  ionizable_dataset_72_test_divprio.csv  milk_plasma_all_data_mrg_020821_v3.xlsx  neutral_dataset_111_train_divprio.csv
_sources/: contributing.rst.txt  documentation.rst.txt  gan.rst.txt  installation.rst.txt  models.rst.txt  preprocessing.rst.txt  quickstart.rst.txt  visualization.rst.txt
code/: Data_Preprocessing_feature_selection.ipynb  Data_Visualization_And_Preprocessing.ipynb  Model_Func-Copy2.ipynb  preprocessing.py
config/: compare_all_models.yaml  compare_all_models.yaml.yaml  ridge_model.yaml
data/: unfiltered_data_smiles.csv
docs/: conf.py  documentation.rst  gan.rst  index.rst  models.rst  preprocessing.rst  utils.rst  visualization.rst
gan/: extract_descriptors.html  gan_featurizer.html  qsar_gan.html
models/: base_model.html  catboost_model.html  (+5 more)
(+147 files in other folders)
