# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsarKit"
version = "0.0.1"
description = "A Python package that offers robust predictive modeling using QSAR for evaluating the transfer of environmental contaminants in breast milk. It integrates multiple predictive models, provides synthetic data generation via GANs, and is tailored for researchers and health professionals."
authors = [{ name = "Tahiri Lab", email = "nadia.tahiri@usherbrooke.ca" }]
readme = "README.md"
keywords = ["QSAR", "Machine Learning", "Chemoinformatics", "Drug Discovery", "Models", "Metrics"]

dependencies = [
    "catboost~=1.2.2",
    "deepchem~=2.7.2.dev20231110055545",
    "jax~=0.4.20",
    "keras~=2.12.0",
    "matplotlib~=3.8.1",
    "numpy~=1.23.5",
    "optuna~=3.4.0",
    "pandas~=2.1.3",
    "protobuf~=4.25.1",
    "rdkit~=2023.9.1",
    "scikit-learn~=1.3.2",
    "scipy~=1.11.3",
    "seaborn~=0.13.0",
    "statsmodels~=0.14.0",
    "torch~=2.0.0",
    "tqdm~=4.66.1",
    "xgboost~=2.0.2",
    "tensorflow~=2.12.0",
    "ipython~=8.21.0",
    "sphinx-rtd-theme~=2.0.0",
    "PyYAML~=6.0.1",
]
#python_requires = '==3.10.*'
requires-python = "==3.10.*"

[project.urls]
Homepage = "https://github.com/tahiri-lab/QSAR"

[project.optional-dependencies]
dev = ["flake8", "pytest", "pytest-cov", "pylint", "black", "isort"]